# rust-countdown

./: Cargo.toml  LICENSE  README.md
src/: countdown.rs  font.rs  main.rs
